<resources>
    <string name="app_name">MoviesApp</string>
    <string name="movie_title">Movie Title</string>
    <string name="released_date">Released Date: 1/1/2018</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="overview">Overview:</string>
    <string name="description">
        Here is the description of the movie,
        it will tell us what the movie is about and etc..
        Here I put many many words in order to validate there are to many words to show in the same screen
        so i have to use scroll view or whatever. Oh fuck I need two lines more so Ill add some bullshit
        here and some bullshit there and hopefully it will work now.
    </string>
    <string name="title_row">Title Row</string>
    <string name="overview_row">Overview Row</string>
    <string name="test">this is a test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="async_task_item">Open Async Task Activity</string>
    <string name="thread_handler_item">Open Thread Handler Activity</string>

    <string name="createButton">Create</string>
    <string name="cancelButton">Cancel</string>
    <string name="startButton">Start</string>
    <string name="activityType">The type of the activity</string>
    <string name="delete_cache_button">Delete Cache</string>
</resources>
