<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.academy.fundamentals.mymoviesapp.DetailsActivity">

        <LinearLayout
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/topImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_section"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_section">

            <ImageView
                android:id="@+id/centerImageView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:src="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/movie_title" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/released_date" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:onClick="movieTrailerOnClick"
                    android:text="@string/movie_trailer" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_section"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/middle_section">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/overview"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/movie_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/description" />
            </ScrollView>


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>